--- a/QuestRooms.BLL/QuestRooms.BLL.csproj
+++ b/QuestRooms.BLL/QuestRooms.BLL.csproj
@@ -44,11 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DtoModels\AddressDto.cs" />
     <Compile Include="DtoModels\CityDto.cs" />
+    <Compile Include="DtoModels\CompanyDto.cs" />
+    <Compile Include="DtoModels\CountryDto.cs" />
+    <Compile Include="DtoModels\PhotoDto.cs" />
+    <Compile Include="DtoModels\QuestRoomDto.cs" />
+    <Compile Include="DtoModels\StreetDto.cs" />
     <Compile Include="Mapping\MapperProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Abstraction\ICityService.cs" />
+    <Compile Include="Services\Abstraction\IQuestRoomService.cs" />
     <Compile Include="Services\Implementation\CityService.cs" />
+    <Compile Include="Services\Implementation\QuestRoomService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QuestRooms.DAL\QuestRooms.DAL.csproj">
