--- a/QuestRooms.UI/QuestRooms.UI.csproj
+++ b/QuestRooms.UI/QuestRooms.UI.csproj
@@ -111,6 +111,16 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\questRoomPhoto0.jpg" />
+    <Content Include="Content\Images\questRoomPhoto1.jpg" />
+    <Content Include="Content\Images\questRoomPhoto2.jpg" />
+    <Content Include="Content\Images\questRoomPhoto3.jpg" />
+    <Content Include="Content\Images\questRoomPhoto4.jpg" />
+    <Content Include="Content\Images\questRoomPhoto5.jpg" />
+    <Content Include="Content\Images\questRoomPhoto6.jpg" />
+    <Content Include="Content\Images\questRoomPhoto7.jpg" />
+    <Content Include="Content\Images\questRoomPhoto8.jpg" />
+    <Content Include="Content\Images\questRoomPhoto9.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\style.css" />
     <Content Include="Global.asax" />
